--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <h1>
             HEADER 
-        </h1>
+<img src="https://avatars.githubusercontent.com/u/100612760?v=4">
+
         <title>My awesome web page</title>
     </head>
 
