--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     </head>
 
   <body>
-    Hello there, awesome person! 
+    Hello there, awesome person!
+      <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>ordered list</li>
+</ol>
+      <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>unordered list</li>
+</ul>
   </body>
 
+   
 </html>
+
+
+  
+
+
