--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <h1>
             HEADER 
 <img src="https://avatars.githubusercontent.com/u/100612760?v=4">
@@ -10,9 +11,9 @@
   <body>
     Hello there, awesome person!
       <ol>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+    <li>This</li>
     <li>Is an</li>
-    <li>ordered list</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ol>
       <ul>
     <li>This</li>
@@ -21,8 +22,16 @@
 </ul>
   </body>
 
+
+    </html>  
+    
+
+
+
+
+
    
-</html>
+
 
 
   
